--- a/Sample/app/src/main/res/layout/activity_main.xml
+++ b/Sample/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/vp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -31,5 +36,12 @@
         android:id="@+id/histogram_view"
         android:layout_width="match_parent"
         android:layout_height="400dp"/>
+
+    <com.godq.compose.botnav.BottomLayoutView
+        android:background="@color/bottom_bg"
+        android:id="@+id/bottom_layout"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/lrlite_base_bottom_height"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
