--- a/component-factory/AppLogcat/src/main/res/layout/alc_main_layout.xml
+++ b/component-factory/AppLogcat/src/main/res/layout/alc_main_layout.xml
@@ -90,7 +90,10 @@
                     android:layout_marginBottom="2dp"
                     android:paddingLeft="8dp"
                     android:paddingRight="8dp"
-                    tools:text="TAG:default"
+                    tools:text="TAG:defaultxxxxxxxxx"
+                    android:singleLine="true"
+                    android:ellipsize="end"
+                    android:maxWidth="150dp"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"/>
 
