--- a/component-factory/AppLogcat/src/main/res/layout/alc_main_layout.xml
+++ b/component-factory/AppLogcat/src/main/res/layout/alc_main_layout.xml
@@ -61,6 +61,25 @@
                     android:layout_width="wrap_content"
                     android:layout_height="22dp"/>
 
+                <TextView
+                    android:id="@+id/alc_save_btn"
+                    android:background="@drawable/alc_btn_bg"
+                    android:shadowColor="#80000000"
+                    android:shadowRadius="0.5"
+                    android:shadowDx="2"
+                    android:shadowDy="2"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginLeft="5dp"
+                    android:paddingStart="10dp"
+                    android:paddingEnd="10dp"
+                    android:textSize="12dp"
+                    android:text="save"
+                    android:gravity="center"
+                    android:textColor="#000000"
+                    android:layout_width="wrap_content"
+                    android:layout_height="22dp"/>
+
                 <View
                     android:layout_weight="1"
                     android:layout_width="0dp"
