--- a/test/src/main/res/layout/activity_test.xml
+++ b/test/src/main/res/layout/activity_test.xml
@@ -1,45 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    tools:context=".TestActivity">
-
+    android:layout_height="match_parent">
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        tools:context=".TestActivity">
 
-        <TextView
-            android:background="@drawable/test_btn_bg"
-            android:textColor="@color/white"
-            android:id="@+id/side_slide_btn"
-            android:gravity="center"
-            android:text="侧滑控件"
-            android:textSize="18dp"
-            android:layout_margin="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"/>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:background="@drawable/test_btn_bg"
+                android:textColor="@color/white"
+                android:id="@+id/side_slide_btn"
+                android:gravity="center"
+                android:text="侧滑控件"
+                android:textSize="18dp"
+                android:layout_margin="15dp"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent">
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent">
+
+
+        </LinearLayout>
+
+
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="match_parent">
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="match_parent">
-
-
-    </LinearLayout>
-
-
-
-</LinearLayout>
+    <FrameLayout
+        android:id="@+id/app_fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</FrameLayout>
