--- a/test/src/main/res/layout/activity_two.xml
+++ b/test/src/main/res/layout/activity_two.xml
@@ -4,6 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:xskin="http://schemas.android.com/xskin"
     tools:context=".TwoActivity">
+
+    <TextView
+        xskin:enable="true"
+        android:textSize="30dp"
+        android:gravity="center"
+        android:text="TwoActivity"
+        android:textColor="@color/skin_text_secondary"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
